# wasmer-python

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bors.toml  build.rs  conftest.py  justfile  setup.py
.cargo/: config
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
benchmarks/: test_compilation_time.py  test_execution_time.py  test_headless_time.py  test_memory.py  test_memory_view_get.py  test_memory_view_set.py  test_nbody.py
docs/: index.html
docs/api/: engine.html  engines.html  index.html  search.js  wasi.html  wasmer.html  wasmer_compiler_cranelift.html  wasmer_compiler_llvm.html  wasmer_compiler_singlepass.html
docs/api/engine/: index.html
docs/api/wasi/: index.html
docs/api/wasmer/: index.html  wasmer.html
docs/api/wasmer_compiler_cranelift/: index.html  wasmer_compiler_cranelift.html
docs/api/wasmer_compiler_llvm/: index.html  wasmer_compiler_llvm.html
docs/api/wasmer_compiler_singlepass/: index.html  wasmer_compiler_singlepass.html
examples/: README.md  add_one.c  add_one.py  compiler_cranelift.py  compiler_llvm.py  compiler_singlepass.py  engine_cross_compilation.py  engine_dylib.py  engine_headless.py  engine_jit.py  engine_native.py  engine_universal.py  exports_function.py  exports_global.py  exports_memory.py  greet.py  imported_function.py  imported_function.rs  imported_function.wasm  imports_exports.py  imports_function.py  imports_function_early_exit.py  instance.py  memory.py  read_memory.py  simple.py  wasi.py  wasi.rs  wasi.wasm
examples/appendices/: from_c.py  from_c.wasm  greet.py  simple.py
scripts/: update-version.sh
src/: error.rs  exports.rs  extern.rs  features.rs  import.rs  import_object.rs  instance.rs  lib.rs  memory_view.rs  module.rs  store.rs  type.rs  types.rs  value.rs  values.rs  wasi.rs  wat.rs
src/instance/: exported.rs  exports.rs  globals.rs  inspect.rs  mod.rs  tables.rs
src/memory/: buffer.rs  mod.rs  view.rs  views.rs
tests/: custom_sections.rs  custom_sections.wasm  global.wasm  global.wat  imported_function.wasm  imported_function.wat  imports.wasm  imports.wat  init.py  instance.py  memory_view.py  simple.py  table.wasm  table.wat  test.py  test_annotations.py  test_benchmarks.py  test_docs.py  test_extern.py  test_function.py  test_global.py  test_import.py  test_import_object.py  test_import_object_dict.py  test_imported_function.py  test_instance.py  test_memory.py  test_memory_view.py  test_module.py  test_store.py  test_table.py  test_target.py  test_type.py  test_value.py  test_wasi.py  test_wat.py  tests.rs  tests.wasm  value.py  wasi.wasm
wasmer-any/: setup.py
