[package]
name = "wasmer-py"
version = "0.4.2-beta-11"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"
description = "Python extension to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/python-ext-wasm"
keywords = ["python", "extension", "webassembly"]
categories = ["wasm"]
build = "build.rs"

[lib]
name = "wasmer"
crate-type = ["cdylib"]

[dependencies]
wasmer = { git = "https://github.com/Hywan/wasmer", branch = "fix-wasmer-types-native-wasm-type-u128" }
wasmer-types = { git = "https://github.com/Hywan/wasmer", branch = "fix-wasmer-types-native-wasm-type-u128" }
pyo3 = { version = "0.11", features = ["extension-module"] }
wat = "1.0"
wasmprinter = "0.2"

[features]
default = ["default-cranelift"]
default-singlepass = ["wasmer/default-singlepass"]
default-cranelift = ["wasmer/default-cranelift"]
default-llvm = ["wasmer/default-llvm"]

[package.metadata.maturin]
project-url = [
    "Source Code, https://github.com/wasmerio/python-ext-wasm/",
    "Bug Tracker, https://github.com/wasmerio/python-ext-wasm/issues",
    "Documentation, https://github.com/wasmerio/python-ext-wasm/",
]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Interpreters",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
