[workspace]
members = [
    "packages/api",
    "packages/compiler-cranelift",
    "packages/compiler-llvm",
    "packages/compiler-singlepass",
    "packages/engines",
]
exclude = [
    "packages/any",
]

[patch.crates-io]
llvm-sys = { git = "https://gitlab.com/hywan/llvm-sys.rs", branch = "fix-llvm-config-windows-10.x" }