[workspace]
members = [
    "packages/api",
    "packages/compiler-cranelift",
    "packages/compiler-llvm",
    "packages/compiler-singlepass",
    "packages/engines",
]
exclude = [
    "packages/any",
]

# [patch.crates-io]
# wasmer = { path = "../wasmer/lib/api" }
# wasmer-wasi = { path = "../wasmer/lib/wasi" }
# wasmer-types = { path = "../wasmer/lib/types" }
# wasmer-compiler-cranelift = { path = "../wasmer/lib/compiler-cranelift" }
# wasmer-compiler-llvm = { path = "../wasmer/lib/compiler-llvm" }
# wasmer-compiler-singlepass = { path = "../wasmer/lib/compiler-singlepass" }
# wasmer-compiler = { path = "../wasmer/lib/compiler" }
